minor change in gralog.tex

--- a/doc/manual/gralog.tex
+++ b/doc/manual/gralog.tex
@@ -122,7 +122,7 @@ transition systems and other structures based on undirected and
 directed graphs. It can create, load, save and edit graphs in
 various formats.
 
-The key focus of Gralog is simplicity of use and a short time of
+The key focus of Gralog is its simplicity of use and a short time of
 learning how to use it.
 
 A special property of Gralog is that it helps the developer to write
