rephrased A Good Rule in manual

--- a/doc/manual/external.tex
+++ b/doc/manual/external.tex
@@ -35,7 +35,7 @@ directory. For other outstanding problems feel free to shoot an email
 at \texttt{gralog@tu-berlin.de} (TODO: make the email address.)
 
 \subsection{A Good Rule}
-If you were borne before 1990, do not incorporate the "`pound"' symbol into variable names or messages. If you were borne after 1990, do not incorporate the "`hashtag"' symbol into variable names or messages. In any case, the \# symbol is reserved and using it \textit{may} cause Gralog to misinterpret messages, which could result in spurious outcomes from your code. Beware!
+Do not incorporate the "`hashtag"' symbol into variable names or messages. The \# symbol is reserved and using it may cause Gralog to misinterpret messages, which could result in spurious outcomes from your code.
 
 \section{Introduction}
 Now that you have the code running and set up, what will follow is a brief explanation of all of the functionality which we have built, structured in an intuitive manner.
